--- a/main.css
+++ b/main.css
@@ -43,6 +43,7 @@
     font-size: 3em;
     border: 0px;
     margin: 0em;
+    text-align: center;
 }
 
 .button-2 {
@@ -80,14 +81,14 @@ p {
     align-items: center;
 }
 
-.container {
+.container-2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.container-2 {
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -124,14 +125,31 @@ row {
     font-size: 1.4em;
     text-align: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.box-green {
+    background-color: #88ff8e;
+}
+
+.box-red {
+    background-color: #ff8e8e;
 }
 
 .center {
     width: 100%;
     text-align: center;
     margin-top: 1em;
+}
+
+i {
+    font-style: normal;
+    font-size: 0.6em;
+    color: #000;
+    font-weight: bolder;
+    line-height: 0.9em;
 }
 
 @media only screen and (max-width: 750px) {
