--- a/main.css
+++ b/main.css
@@ -1,6 +1,13 @@
 * {
-    font-family: "Ruda", "sans-serif";
-    font-weight: bold;
+    font-family: "Vina Sans", sans-serif;
+    font-weight: normal;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .message {
@@ -95,13 +102,15 @@ p {
     align-items: center;
     z-index: 20;
     position: absolute;
-    top: 5.3em;
+    top: 5.6em;
 }
 
 .background {
     position: absolute;
     width: 36em;
     height: 36em;
+    border: 2px dashed #212121;
+    border-radius: 5px;
     /* opacity: 0.4; */
 }
 
@@ -133,6 +142,8 @@ row {
     justify-content: center;
     align-items: center;
     border: 1px solid #fff;
+    /* border: 1px solid #61ca78; */
+    /* background-color: bisque; */
 }
 
 .center {
